--- a/nebula/css/main.css
+++ b/nebula/css/main.css
@@ -70,7 +70,8 @@ a:hover {
 **************************/
 
 #header {
-  position: absolute;
+/*  position: absolute;*/
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
@@ -79,6 +80,14 @@ a:hover {
   z-index: 9999;
 }
 
+#header,
+.preloader {
+  background: -webkit-linear-gradient(90deg, #649173 10%, #DBD5A4 90%); /* Chrome 10+, Saf5.1+ */
+  background:    -moz-linear-gradient(90deg, #649173 10%, #DBD5A4 90%); /* FF3.6+ */
+  background:     -ms-linear-gradient(90deg, #649173 10%, #DBD5A4 90%); /* IE10 */
+  background:      -o-linear-gradient(90deg, #649173 10%, #DBD5A4 90%); /* Opera 11.10+ */
+  background:         linear-gradient(90deg, #649173 10%, #DBD5A4 90%); /* W3C */   
+}
 #header .container {
   height: 100px;
   display: table;
@@ -100,6 +109,7 @@ a:hover {
 }
 
 #navigation {
+  
   position: absolute;
   left: 0;
   top: 0;
@@ -132,6 +142,7 @@ a:hover {
 }
 
 .main-nav ul li a {
+  position: fixed;
   display: block;
   border-top: 1px solid #f5f5f5;
   padding-top: 20px;
